- Itemsets can now inherit from others
- config can now have have data
- config options to limit the distance that players can hear each other
- config option to allow players to receive minimal messages
- config option to allow items to be deleted on the ground after a game ends
- Fixed official name to "MyHungerGames" instead of "HungerGames"
- Respawning players and spectators now can respawn at random locations that other players have been
- Added a player option to /hg spectate to allow spectators to teleport to a specific player
- Another possible fix for chest stuff
- New command system
- Sign listening
- fixed item chests are in
- added a generic data map to Session

v0.4.3
- Fixed nullpointerexception in getSpectating() for real this time

v0.4.1
- Fixed nullpointerexception in getspectating()

v0.4
- Might have fixed the games not saving
- Fixed a nullpointerexception
- Basic spectating
- Changed most player keys to String keys
- Might have fixed permissions. (again)
- Added specific block change listener. Can be internal, LogBlock, or HawkEye (HawkEye is not currently implements) requests are open for more
- Added a Restock command to restock all chests in a game

v0.3.1
- Logging stuff
- register forgotten BlockListener
- Can-teleport
- use-command
- Early world reseting in the form of full world
- /hga add game <game name>' now instructs user to add spawnpoints after creating it.
- Fixed players still being able to join even under conditions where they shouldn't be able to
- Added option to allow chests to be automatically added and filled at first open

v0.3
- Clearing inventories is now optional
- Fixed winner not being recognized
- Add quit command.
- Cleanup
- Lives cleanup
- Rejoin/Join/Leave cleaned up
- Added Metrics
- Use equalsIgnoreCase, not equals for commands
- all-vote is in
- block interact/place/break options
- Added an unimplemented Logging class
- Auto-vote
- Made quitting before a game starts remove you from the games stats